# agentmonitor

./: .gitignore  AgentMonitor.spec  LICENSE  README.md  pyproject.toml  requirements.txt  v0.1.0-PLAN.md  wrangler.jsonc
agent_monitor/: README.md  __init__.py  _take_screenshots.py  _verify_seed.py  api.py  browser.py  code_scan.py  db.py  desktop.py  interp_bridge.py  memory.py  nla_cache.py  nla_client.py  nla_worker.py  pricing.py  run.py  run_server.py  runner.py  safety_llamaguard.py  seed.py  smoke.py  smoke_llamaguard.py  smoke_nla.py  transformers_runtime.py  wrappers.py
agent_monitor/adapters/: __init__.py  anthropic.py  autogen.py  findings.py  langchain.py  ollama.py  openai.py  pipeline.py  sandbox.py  sandbox_report.py  sarif.py  smolagents.py  tournament.py
agent_monitor/classifiers/: __init__.py  offensive_patterns.py
agent_monitor/web/: index.html
agent_monitor/web/static/: app.js  style.css
marketing/: README.md  index.html
